Bug 386795 - generating random Gaussian values fails
Summary: generating random Gaussian values fails
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: general (other bugs)
Version First Reported In: latest
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Alexander Semke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-11-12 21:27 UTC by uwestoehr
Modified: 2017-11-14 20:29 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description uwestoehr 2017-11-12 21:27:14 UTC
- create a new spreadsheet
- generate random data and use the default settings in the appearing dialog: Gaussian (normal), sigma = 1, ยต = 0

result: one gets always a 1 as value for all cells in the column.

This cannot be correct I mean there are also no negative values.
Comment 1 Alexander Semke 2017-11-14 20:29:39 UTC
Git commit 96f6c568f67e9390d25e928bd5c0f8ed08714585 by Alexander Semke.
Committed on 14/11/2017 at 20:28.
Pushed by asemke into branch 'master'.

Fixed the initialisation and the namings of parameters for couple of distributions in RandomValuesDialog.
FIXED-IN: 2.5

M  +13   -13   src/kdefrontend/spreadsheet/RandomValuesDialog.cpp

https://commits.kde.org/labplot/96f6c568f67e9390d25e928bd5c0f8ed08714585