Fixed the initialisation and the namings of parameters for couple of distributions in RandomValuesDialog.

BUG: 386795
FIXED-IN: 2.5